[gd_scene load_steps=9 format=2]

[ext_resource path="res://juego1/environment/LineaGanar.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego1/zorro/zorro.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego1/oveja/oveja.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego1/environment/environment.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego1/environment/InterfazDeUsuario.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego1/world_new.gd" type="Script" id=6]
[ext_resource path="res://assets/pause_black.png" type="Texture" id=7]
[ext_resource path="res://assets/pause.png" type="Texture" id=8]

[node name="world" type="Node2D"]
script = ExtResource( 6 )

[node name="environment" parent="." instance=ExtResource( 4 )]

[node name="LineaGanar" parent="." instance=ExtResource( 1 )]
position = Vector2( 149, 30 )
collision_layer = 2
collision_mask = 2

[node name="zorro" parent="." instance=ExtResource( 2 )]
position = Vector2( 290, 213 )
collision_layer = 2
collision_mask = 2

[node name="oveja" parent="." instance=ExtResource( 3 )]
position = Vector2( 506, 22 )

[node name="oveja2" parent="." instance=ExtResource( 3 )]
light_mask = 2
position = Vector2( 501, 409 )

[node name="oveja3" parent="." instance=ExtResource( 3 )]
light_mask = 4
position = Vector2( 608, 407 )

[node name="oveja4" parent="." instance=ExtResource( 3 )]
light_mask = 8
position = Vector2( 605, 309 )

[node name="oveja5" parent="." instance=ExtResource( 3 )]
light_mask = 16
position = Vector2( 606, 211 )

[node name="oveja6" parent="." instance=ExtResource( 3 )]
position = Vector2( 608, 115 )

[node name="oveja7" parent="." instance=ExtResource( 3 )]
position = Vector2( 607, 21 )

[node name="oveja8" parent="." instance=ExtResource( 3 )]
position = Vector2( 703, 409 )

[node name="oveja9" parent="." instance=ExtResource( 3 )]
position = Vector2( 704, 306 )

[node name="oveja10" parent="." instance=ExtResource( 3 )]
position = Vector2( 705, 212 )

[node name="oveja11" parent="." instance=ExtResource( 3 )]
position = Vector2( 708, 117 )

[node name="oveja12" parent="." instance=ExtResource( 3 )]
position = Vector2( 702, 23 )

[node name="oveja13" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 308 )

[node name="InterfazDeUsuario" parent="." instance=ExtResource( 5 )]
margin_left = 7.0
margin_top = 328.0
margin_right = 763.0
margin_bottom = 376.0

[node name="btn_pause" type="TextureButton" parent="."]
margin_right = 62.0
margin_bottom = 56.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Screen" type="CanvasLayer" parent="."]

[connection signal="area_entered" from="LineaGanar" to="." method="_on_LineaGanar_area_entered"]
[connection signal="pressed" from="btn_pause" to="." method="_on_btn_pause_pressed"]
